--- a/style.scss
+++ b/style.scss
@@ -219,12 +219,12 @@ nav {
   }
 
   a {
-    margin-left: 20px;
-    color: $darkGray;
-    text-align: right;
-    font-weight: 300;
-    letter-spacing: 1px;
-    text-decoration: underline;
+   margin-left: 20px;
+text-align: right;
+font-weight: 300;
+letter-spacing: 1px;
+font-style: italic;
+
 
     @include mobile {
       margin: 0 10px;
